feat: front page HTML now generated from a template

--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -1,3 +1,19 @@
-<html>
-    <title>To-Do lists</title>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <title>To-Do lists</title>
+    </head>
+    <body>
+        <header>
+            <h1>Your To-Do list</h1>
+        </header>
+        
+        <main>
+            <input id="id-new-item" type="text" placeholder="Enter a to-do item">
+            <table id="id-list-table"></table>
+        </main>
+    </body>
 </html>
